--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -1,7 +1,23 @@
-.header-logo {
-  position: absolute;
-  width: 260px;
-  height: 116px;
-  left: 122px;
-  top: 22px;
+.header {
+  max-width: 100%;
+  height: 130px;
+  background: #ffffff;
+  box-shadow: 0px 5px 20px rgba(157, 157, 157, 0.25);
+  .header-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header-menu > ul {
+    font-size: 20px;
+    list-style: none;
+    display: flex;
+    gap: 50px;
+  }
+  .header-icons {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 40px;
+    transform: translateX(-100px);
+  }
 }
