--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -3,18 +3,29 @@
   height: 130px;
   background: #ffffff;
   box-shadow: 0px 5px 20px rgba(157, 157, 157, 0.25);
-  .header-inner {
+  &-inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  .header-menu > ul {
+  &-logo{
+    cursor: pointer;
+  }
+  &-menu > ul > li > a:active{
+    cursor: default;
+  }
+  &-menu > ul > li > a{
+    text-decoration: none;
+    color: black;
+    font-family: '';
+  }
+  &-menu > ul {
     font-size: 20px;
     list-style: none;
     display: flex;
     gap: 50px;
   }
-  .header-icons {
+  &-icons {
     display: flex;
     flex-wrap: wrap;
     column-gap: 40px;
