--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -1,6 +1,6 @@
 .header {
-  max-width: 100%;
-  height: 130px;
+  min-width: 100%;
+  height: 160px;
   background: #ffffff;
   box-shadow: 0px 5px 20px rgba(157, 157, 157, 0.25);
   &-inner {
@@ -9,6 +9,7 @@
     align-items: center;
   }
   &-logo{
+    margin-right: 20px;
     cursor: pointer;
   }
   &-menu > ul > li > a:active{
@@ -19,13 +20,19 @@
     color: black;
     font-family: '';
   }
+  &-input{
+    transform: translateX(-900px);
+  }
   &-menu > ul {
     font-size: 20px;
     list-style: none;
     display: flex;
     gap: 50px;
   }
-  &-icons {
+  &-icons > &-icon{
+    cursor: pointer;
+  }
+  &-icons { 
     display: flex;
     flex-wrap: wrap;
     column-gap: 40px;
