--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,12 +1,13 @@
 @import '../Layout//Header/Header.scss';
 
-.wrapper{
-    width: 1904px;
-}
 .container{
-    width: 1660px;
+    width: 1180px;
     margin: 0 auto;
-    @media screen and (max-width: 1110px){
-        width: 960px;
-    }
+}
+html, body{
+    height: 100%;
+}
+.wrapper{
+    min-height: 100%;
+    position: relative;
 }
