--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -1,6 +1,6 @@
 .header {
   max-width: 100%;
-  height: 130px;
+  height: 120px;
   background: #ffffff;
   box-shadow: 0px 5px 20px rgba(157, 157, 157, 0.25);
   .header-inner {
@@ -13,6 +13,10 @@
     list-style: none;
     display: flex;
     gap: 50px;
+  }
+  .header-menu > ul > li:hover{
+    border-bottom: 1px solid black;
+    transition: 0.5s;
   }
   .header-icons {
     display: flex;
