--- a/src/Layout/Footer/Footer.scss
+++ b/src/Layout/Footer/Footer.scss
@@ -1,5 +1,122 @@
-.footer{   
-    position: relative;
-    height: 126px;
-    max-height: 100%;
+@media (min-width: 767px){
+    .footer {
+        display: flex;
+    }
+}
+@media (min-width: 767px){
+    .footer__image{
+        flex: 0 0 50%;
+    }
+}
+.footer{
+    &__subscription{
+        position: absolute;
+        z-index: 6;
+        &-left{
+            margin-top: 80px;
+            &-subTitle{
+                margin: 40px 0 39px;
+                width: 500px;
+                height: 45px;
+                font-weight: 500;
+                font-size: 18px;
+            }
+            &-title{
+                font-weight: 900;
+                font-size: 35px;
+                width: 560px;
+                height: 43px;
+                line-height: 44px;
+            }
+        }
+    }
+    .subForm > p > a {
+        color: #F9B300;
+    }
+    .subForm > p {
+        margin-top: 15px;
+        width: 526px;
+        height: 14px;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 130%;
+    }
+    &-input{
+        padding: 17px 500px 16px 40px;
+        background: #F3F3F3;
+        border-radius: 28px;
+        border: none;
+        position: absolute;
+    }
+    &-button{
+        position: relative;
+        margin-left: 550px;
+        cursor: pointer;
+        padding: 17px 33px 16px 40px;
+        border-radius: 28.3403px;
+        background: #F9B300;
+        color: white;
+        border: none; /* Убираем рамку */
+    }
+    @media (min-width: 1700px){
+        background-size: cover;
+        .footer-back{
+            background-size: cover;
+        }   
+    }
+    background-image: url('../../assets/footer-background.svg');
+    background-repeat: no-repeat;
+    background-attachment:local;
+    background-size: auto;
+    overflow: hidden;
+    height: 450px;
+    &-back{
+        background-size: auto;
+        min-width: 100%;
+        background-image: url('../../assets/footer-back.svg');
+        background-repeat: no-repeat;
+        background-position-y: -13px;
+        &-top{
+            height: 10px;
+            background-color: #F5F5F5;
+        }
+    }
+    &__content{
+        justify-content: space-between;
+        flex: 0 0 100%;;
+    }
+    &__image {        
+        margin-left: auto;
+        &-bottom{
+            transform: translate(-100%, -13%);
+            position: absolute;
+        }
+        &-top{
+            position: absolute;
+            max-width: 466px;
+            max-height: 322px;
+            transform: translate(-100%, -10%);
+        }
+    }
+    &__image > img{
+        max-width: 100%;
+    }
+    &__body{
+        width: 50%;
+    }
+    &__container{
+        max-width: 1180px;
+        margin: 0 auto;
+    }
+}
+
+.footer__bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &-right > ul{
+        max-width: 401px;
+        gap: 60px;
+        display: flex;
+    }
 }
