--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -1,14 +1,8 @@
 .header {
-  font-family: sans-serif;
   height: 113px;
-  a:active{
-    cursor: default;
-  }
-  a{
-    list-style: none;
-    color: black;
-    text-decoration: none;
-  }
+  min-width: 100%;
+  background-color: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   &__right > img{
     max-width: 22px;
     max-height: 22px;
@@ -33,6 +27,10 @@
     line-height: 21px;
   }
   &__inner{
+    background-color: white;
+    position: fixed;
+    z-index: 140;
+    gap: 246px;
     justify-content: space-between;
   }
 }
