--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,31 @@
-@import '../Layout//Header/Header.scss';
-
+@import '../Layout/Header/Header.scss';
+@import '../Layout/Footer/Footer.scss';
+@import '../pages/Catalog/Catalog.scss';
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .container{
     width: 1180px;
     margin: 0 auto;
 }
+a:active, button:active{
+  cursor: default;
+}
+a{
+  list-style: none;
+  color: black;
+  text-decoration: none;
+}
+ul, li, a{
+    list-style: none;
+    color: black;
+    text-decoration: none;
+}
 html, body{
+ // Пока-что такой
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     height: 100%;
 }
 .wrapper{
