--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,8 @@
 @import '../Layout//Header/Header.scss';
 @import '../scss/Main.scss';
 @import '../Layout/Footer/Footer.scss';
+@import '../Components/UI/Slider/Slider.scss';
+@import '../scss/News.scss';
 
 *{
     margin: 0;
