--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px;
   }
   .header-menu > ul {
     font-size: 20px;
@@ -23,5 +24,9 @@
     flex-wrap: wrap;
     column-gap: 40px;
     transform: translateX(-100px);
+  }
+  .mainLogo{
+    max-width: 200px;
+    max-height: 200px;
   }
 }
