--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -1,7 +1,6 @@
 .wrapper{
-    width: 1720px;
+    width: 1730px;
     height: 1200px;
-
     .fresh-coffe{
         max-width: 100%;
         height: 600px;
@@ -9,28 +8,33 @@
         padding: 70px 20px 0 70px;
     }
     .fresh-coffe-inner{
-        
+        display: flex;
+        padding-top: 30px;
     }
     .fresh-coffe-container{
         margin-top: 40px;
     }
     .fresh-coffe-left > h1 {
-        font-size: 50px;
-        font-weight: 900;
+        position: absolute;
+        width: 960px;
+        height: 100px;
+        left: 60px;
+        top: 156px;
+        
+        font-size: 80px;
+        line-height: 100px;
     }
     .fresh-coffe-left > p{
-        width: 347px;
-        line-height: 32px;
+        width: 400px;
+        line-height: 24px;
         padding-top: 40px;
-    }
-    .fresh-coffe-left > span{
-        line-height: 100px;
     }
     .fresh-coffe-left > span > b{
         font-weight: 700;
         font-size: 18px;
     }
     .fresh-coffe-left > button{
+        margin-top: 50px;
         width: 200px;
         height: 45px;
         background-color: #F9B300;
@@ -41,11 +45,17 @@
         cursor: pointer;
     }
 
-}
+
 
 .catalog-products{
     max-width: 100%;
     height: 400px;
+    .catalog-inner{
+        padding: 30px;
+        font-weight: 7  00;
+        font-size: 24px;
+        line-height: 44px;
+    }
 }
 
 .sale-items{
@@ -85,7 +95,7 @@
 
 .advantages{
     max-width: 100%;
-    height: 100vh;
+    height: 900px;
     background-color: #FFF7E1;
     .advantages-inner{
         padding-top: 200px;
@@ -142,10 +152,34 @@
 
 .roast-coffe{
     max-width: 100%;
-    height: 100vh;
-    background-color: aqua;
+    height: 700px;
+    background: url('../assets/Images/roastCoffe.png');
     .roast-coffe-inner{
-        padding-top: 100px;
+        padding: 70px;
+        color: white;
+    }
+    .roast-coffe-inner > h2{
+        font-family: 'Gilroy';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 35px;
+        line-height: 150px;
+    }
+    .roast-coffe-inner > p{
+        width: 776px;
+        line-height: 20px;
+        padding-bottom: 20px;
+    }
+    .roast-coffe-inner > button{
+        margin-top: 80px;
+        width: 230px;
+        height: 45px;
+        background-color: #F9B300;
+        color: #fff;
+        font-size: 15px;
+        border: none;
+        cursor: pointer;
     }
 }
 
+}
