--- a/src/Layout/Footer/Footer.scss
+++ b/src/Layout/Footer/Footer.scss
@@ -56,7 +56,7 @@
         border-radius: 28.3403px;
         background: #F9B300;
         color: white;
-        border: none; /* Убираем рамку */
+        border: none;
     }
     @media (min-width: 1700px){
         background-size: cover;
@@ -109,7 +109,6 @@
         margin: 0 auto;
     }
 }
-
 .footer__bottom{
     display: flex;
     justify-content: space-between;
