--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -1,13 +1,5 @@
 .header {
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  &__right > img{
-    max-width: 22px;
-    max-height: 22px;
-  }
-  &__left{
-    margin-top: 20px;
-    margin-bottom: 13px;
-  }
+  // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   &__inner, &__center, &__right, &__left, &__center > ul{
     display: flex;
     align-items: center;
@@ -22,20 +14,22 @@
   }
   &__center > ul{
     list-style: none;
-    gap: 60px;
     font-weight: 500;
     font-size: 18px;
-    line-height: 21px;
-  }
-  &__inner{
-    gap: 246px;
+    width: 401px;
     justify-content: space-between;
   }
-  &__wrapper{
-    width: 100%;
+  &__inner{
+    justify-content: space-between;
   }
-  z-index: 100;
+  z-index: 1000000;
   min-width: 100%;
-  position: fixed;
+  position: sticky;
+  top: 0;
   background-color: rgb(255, 255, 255);
+}
+.white{
+  z-index: 7;
+  height: 22px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
