--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,14 +1,15 @@
 @import '../Layout/Header/Header.scss';
 @import '../Layout/Footer/Footer.scss';
-@import '../pages/Catalog/Items/Catalog.scss';
-@import '../pages/Catalog/Filters/Filters.scss';
+@import '../pages/Catalog/Coffee-Items/Coffee-Items.scss';
+@import '../pages/Catalog/Coffee-Filters/Coffee-Filters.scss';
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 .container{
-    width: 1180px;
+    width: 1210px;
+    padding: 0 30px;
     margin: 0 auto;
 }
 a:active, button:active{
@@ -18,6 +19,9 @@ a{
   list-style: none;
   color: black;
   text-decoration: none;
+}
+h1,h2,h3,h4,h5,h6{
+    letter-spacing: 0.5px;
 }
 ul, li, a{
     list-style: none;
