--- a/src/Layout/Footer/Footer.scss
+++ b/src/Layout/Footer/Footer.scss
@@ -73,6 +73,7 @@
     &-back{
         background-size: auto;
         min-width: 100%;
+        max-height: 300px;
         background-image: url('../../assets/footer-back.svg');
         background-repeat: no-repeat;
         background-position-y: -13px;
