--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import '../Layout/Header/Header.scss';
+@import '../pages/Home/Home.scss';
 @import '../Layout/Footer/Footer.scss';
 @import '../pages/Catalog/Coffee-Items/Coffee-Items.scss';
 @import '../pages/Catalog/Coffee-Filters/Coffee-Filters.scss';
@@ -31,10 +32,8 @@ ul, li, a{
 html, body{
  // Пока-что такой
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    height: 100%;
+    min-height: 100%;
 }
 .wrapper{
     min-height: 100%;
-    min-width: 100%;
-    position: relative;
 }
