--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -49,12 +49,54 @@
 
 .catalog-products{
     max-width: 100%;
-    height: 400px;
+    height: 700px;
     .catalog-inner{
-        padding: 30px;
-        font-weight: 7  00;
-        font-size: 24px;
-        line-height: 44px;
+        padding: 40px;
+
+    }
+    .catalog-inner > h2{
+        font-size: 50px;
+        padding-left: 116px;
+    }
+    .catalog-items{
+        display: flex;
+        justify-content: center;
+        padding-top: 80px;
+        gap: 20px;
+    }
+    .catalog-card{
+        position: relative;
+        width: 335px;
+        height: 410px;
+
+        background: #FFFFFF;
+        box-shadow: 0px 0px 30px rgba(146, 146, 146, 0.2);
+        border-radius: 20px;
+    }
+    .catalog-card_img{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .ct-tea-img{
+        max-width: 250px;
+        max-height: 250px;
+    }
+    .catalog-card_title{
+        text-align: center;
+        padding-top: 28px;
+    }
+    .catalog-card_button{
+        position: absolute;
+        left: 57px;
+        width: 230px;
+        height: 45px;
+        background-color: #F9B300;
+        color: #fff;
+        font-size: 15px;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
     }
 }
 
@@ -82,7 +124,6 @@
         left: 604px;
         top: 800px;
         
-        font-family: 'Gilroy';
         font-weight: 500;
         font-size: 20px;
         line-height: 130%;
@@ -137,8 +178,6 @@
         transform: translateY(-90px);
     }
     .ad-block-content > h3{
-        font-family: 'Gilroy';
-        font-style: normal;
         font-weight: bolder;
         font-size: 21px;
         line-height: 55px;
@@ -179,6 +218,7 @@
         font-size: 15px;
         border: none;
         cursor: pointer;
+        border-radius: 5px;
     }
 }
 
