--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -1,25 +1,73 @@
 .header {
   // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  &__inner, &__center, &__right, &__left, &__center > ul{
+  &__item2 {
+    transform: translateX(-20px);
+  }
+  &__item1 {
+    display: flex;
+    max-width: fit-content;
+  }
+  .arrowdown {
+    margin-left: 4px;
+    transform: rotate(-180deg);
+    transition: 500ms;
+    cursor: pointer;
+  }
+  .arrowup {
+    margin-left: 4px;
+    cursor: pointer;
+    width: 10px;
+    height: 10px;
+    transition: 500ms;
+  }
+  .none{
+    display: none;
+  }
+  .block{
+    display: block;
+  }
+  span:hover {
+    background-color: beige;
+  }
+  &-accordion {
+    &-title {
+      cursor: pointer;
+    }
+    height: 0px;
+  }
+  &__inner,
+  &__center,
+  &__right,
+  &__left,
+  &__center > ul {
     display: flex;
     align-items: center;
   }
-  &__right > a > img{
+  &__right > a > img {
     max-width: 22px;
     max-height: 22px;
   }
-  &__right{
+  select {
+    border: none;
+    text-align: right;
+    cursor: pointer;
+    width: 222px;
+    font-weight: 500;
+    font-size: 18px;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  }
+  &__right {
     max-width: 146px;
     gap: 40px;
   }
-  &__center > ul{
+  &__center > ul {
     list-style: none;
     font-weight: 500;
     font-size: 18px;
     width: 401px;
     justify-content: space-between;
   }
-  &__inner{
+  &__inner {
     justify-content: space-between;
   }
   z-index: 1000000;
@@ -28,7 +76,7 @@
   top: 0;
   background-color: rgb(255, 255, 255);
 }
-.white{
+.white {
   z-index: 7;
   height: 22px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
