--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -63,7 +63,7 @@
     }
     .catalog-inner > h2{
         font-size: 50px;
-        padding-left: 116px;
+        max-width: 512px;
     }
     .catalog-items{
         display: flex;
@@ -138,6 +138,16 @@
 }
 
 .advantages{
+    &-block{
+        transform: translateX(730px);
+        @media (max-width: 1173px){
+            transform: translateX(630px);
+        }
+        @media (max-width: 1060px){
+            transform: translateX(130px);
+            color: rgb(49, 49, 49);
+        }
+    }
     height: 900px;
     background-color: #FFF7E1;
     .advantages-inner{
@@ -147,6 +157,9 @@
     .advantages-left{
         display: flex;
         position: relative;
+    }
+    &-inner{
+        max-width: fit-content;
     }
     @media (max-width: 1880px){
         .img1{
@@ -162,8 +175,8 @@
         max-width: 600px;
         max-height: 400px;
     }
-    .advantages-left > .img1{
-        @media (max-width: 960px){
+    .advantages-left > .img1, .advantages-left > .img2{
+        @media (max-width: 1060px){
             display: none;
         }
         position: absolute;
