--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,9 @@
 }
 .container {
   max-width: 1210px;
+  @media (max-width: 578px){
+    padding: 0;
+  }
   padding: 0 30px;
   margin: 0 auto;
 }
