--- a/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
@@ -1,5 +1,5 @@
-.catalog{
-    height: 400px;
-    background-color: aliceblue;
-    display: inline-block;
-}
+// .catalog{
+//     height: 400px;
+//     background-color: aliceblue;
+//     display: inline-block;
+// }
