--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -21,10 +21,9 @@
     transition: 500ms;
     cursor: pointer;
     position: relative;
-    // transform: translateX(-80px);
   }
   .si{
-    transform: translateX(-80px);
+    margin-right: 100%;
   }
   .arrowup {
     cursor: pointer;
@@ -49,8 +48,11 @@
   &-accordion {
     position: absolute;
     &-title {
+      white-space: nowrap;
       padding-left: 10px;
       width: 220px;
+      display: flex;
+      max-height: 0;
       cursor: pointer;
     }
     width: 230px;
