--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,11 +9,11 @@
   box-sizing: border-box;
 }
 .container {
-  max-width: 1210px;
+  width: 1210px;
   @media (max-width: 578px){
     padding: 0;
   }
-  padding: 0 30px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 a:active,
