стили в личном кабинете

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import "../Layout/Header/Header.scss";
+@import "../pages/Profile/Profile.scss";
 @import "../pages/Home/Home.scss";
 @import "../Layout/Footer/Footer.scss";
 @import "../pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss";
