--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,13 +3,17 @@
 @import "../Layout/Footer/Footer.scss";
 @import "../pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss";
 @import "../pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss";
+@import "../Components/News/News.scss";
+
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  // font-family: 'Gilroy';
 }
 .container {
-  max-width: 1210px;
+  max-width: 1556px;
   padding: 0 30px;
   margin: 0 auto;
 }
