--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,17 +4,17 @@
 @import "../Layout/Footer/Footer.scss";
 @import "../pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss";
 @import "../pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss";
-* {
+*{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 .container {
-  width: 1210px;
+  max-width: 1210px;
   @media (max-width: 578px){
     padding: 0;
   }
-  padding: 0 15px;
+  padding: 0 15px; 
   margin: 0 auto;
 }
 a:active,
@@ -31,7 +31,7 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6 { 
   letter-spacing: 0.5px;
 }
 ul,
@@ -43,7 +43,7 @@ a {
 }
 html,
 body {
-  // Пока-что такой
+  // Байгелди: У меня не работает 'Gilroy'
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   min-height: 100%;
 }
