--- a/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
@@ -1,29 +1,33 @@
 .filters{
-  background-repeat: no-repeat;
-  background-image: url('../../../../assets/filters-back.svg');
-  background-position-y: 326px;
-  background-color: linear-gradient(to bottom, #F9B300 331px, transparent 331px);
-  background-size: 300vh;
-  max-height: 777px;
-  display: flex;
-  &__inner{
+    background-repeat: no-repeat;
+    background-image: url('../../../../assets/Catalog/filters-back.svg');
+    background-position-y: 326px;
+    background-color: linear-gradient(to bottom, #F9B300 331px, transparent 331px);
+    background-size: 300vh;
+    min-height: 777px;
+    display: flex;
+    &__inner{
       display: flex;
-  }
-  &-title{
-      min-width: 100%;
-  }
-  &-back{
-      background: linear-gradient(to bottom, #F9B300 331px, transparent 331px);
-  }
-  &-bottom{
-      &-blocks{
-          &-item:hover{
+    }
+    &-title{
+        max-width: 100%;
+    }
+    &-back{
+        background: linear-gradient(to bottom, #F9B300 331px, transparent 331px);
+    }
+    &-bottom{
+        &-blocks{
+            flex-wrap: wrap;
+            @media (min-width: 1211px){
+                display: flex;
+            }
+            &-item:hover{
               opacity: 0.7;
-          }
-          &-item:active{
+            }
+            &-item:active{
               cursor: default;
-          }
-          &-item{
+            }
+            &-item{
               cursor: pointer;
               background: #FFFFFF;
               box-shadow: 0px 0px 21.2553px rgba(149, 149, 149, 0.25);
@@ -42,104 +46,127 @@
                   justify-content: center;
                   flex-wrap: wrap;
                   align-content: space-between;
-              }
-          }
+                }
+            }
           display: flex;
           margin-top: 15px;
-          justify-content: space-between;
-      }
-  }
-  @media (max-width: 1340px){
-   &-coffee{
-      z-index: -1;
-   }   
-  }
-  &-coffee{
-      background-image: url('../../../../assets/footer-coffee.png');
-      height: 478px;
-      position: absolute;
-      width: 300px;
-      right: 0;
-      background-position-x: 50px;
-      background-position-y: 15px;
-      background-repeat: no-repeat;
-  }
-  &-cup{
-      background-position-y: -30px;
-      position: absolute;
-      width: 500px;   
-      right: 0;
-      z-index: 1;
-      background-image: url('../../../../assets/footer-cup.png');
-      background-repeat: no-repeat;
-      height: 322px;
-      margin-left: auto;
-  }
-  &__left{
-      z-index: 3;
-  }
-  &__left > h1{
-      margin-top: 100px;
-      font-weight: 900;
-      font-size: 50px;
-      line-height: 62px;
-      color: #FFFFFF;
-  }
+          gap: 16px;
+        }
+}
+    &-coffee{
+        background-image: url('../../../../assets/Footer/footer-coffee.png');
+        height: 478px;
+        position: absolute;
+        width: 300px;
+        right: 0;
+        background-position-x: 50px;
+        background-position-y: 15px;
+        background-repeat: no-repeat;
+    }
+    &-cup{
+        background-position-y: -30px;
+        position: absolute;
+        width: 500px;
+        @media (max-width: 500px){
+            width: 300px;
+        }   
+        right: 0;
+        z-index: 1;
+        background-image: url('../../../../assets/Footer/footer-cup.png');
+        background-repeat: no-repeat;
+        height: 322px;
+        margin-left: auto;
+    }
+    &__left{
+        z-index: 3;
+    }
+    &__left > h1{
+        margin-top: 100px;
+        font-weight: 900;
+        font-size: 50px;
+        line-height: 62px;
+        @media (max-width: 542px){
+            width: 442px;
+          }
+        color: #FFFFFF;
+    }
   &-nav-first{
-      font-size: 12px;
-      color: white;
+        font-size: 12px;
+        color: white;
   }
   &-nav-item:hover{
-      color: #f2f2f2;
-  }
+        color: #f2f2f2;
+    }
   &-nav-item{
-      color: white;
-      font-size: 12px;
+        color: white;
+        font-size: 12px;
   }
   &-nav{
-      margin-top: 30px;
-      width: 277px;
-      justify-content: space-between;
-      display: flex;
-      color: white;
-  }
+        margin-top: 30px;
+        width: 277px;
+        justify-content: space-between;
+        display: flex;
+        color: white;
+    }
   &-functions{
-      display: flex;
-      margin-top: 95px;
-      z-index: 4000;
+        display: flex;
+        margin-top: 95px;
+        z-index: 4000;
+        flex-wrap: wrap;
+        @media (min-width: 1211px){
+            
+        }
   }
   &-function-left-sec>h3{ 
-      margin: 30px 35px 30px 30px;
-      font-weight: 700;
-      font-size: 22px;
-      width: 185px;
+        margin: 30px 35px 30px 30px;
+        font-weight: 700;
+        font-size: 22px;
+        width: 185px;
   }
   &-function-left{
-      display: flex;
-      width: 280px;
-      border-radius: 14.1702px;
-      height: 373px;
-      background-color: white;
-      margin-right: 20px;
-      box-shadow: 0px 0px 21.2553px rgba(149, 149, 149, 0.25);
+        display: flex;
+        width: 280px;
+        border-radius: 14.1702px;
+        height: 373px;
+        background-color: white;
+        margin-right: 20px;
+        box-shadow: 0px 0px 21.2553px rgba(149, 149, 149, 0.25);
       &-line{
-          height: 308px;
-          width: 10px;
-          background-color: #F9B300;
-          border-radius: 7px;
-          margin: 32px 0 0 20px;
+            height: 308px;
+            width: 10px;
+            background-color: #F9B300;
+            border-radius: 7px;
+            margin: 32px 0 0 20px;
       }
   }
   &-functions-right{
       background-color: white;
       box-shadow: 0px 0px 21.2553px rgba(149, 149, 149, 0.25);
-      height: 373px;
+      min-height: 373px;
       border-radius: 14.1702px;
-      max-width: 880px; 
-      max-height: 373px;
+      max-width: 880px;
+      background-size: cover;
+    //   @media (max-width: 473px){
+
+    //   }
       &-line{
           height: 10px;
           width: 770px;
+          @media (max-width: 911px){
+            width: 670px;
+          }
+          @media (max-width: 811px){
+            width: 570px;
+          }
+          @media (max-width: 711px){
+            width: 470px;
+          }
+          @media (max-width: 575px){
+            width: 370px;
+          }
+          @media (max-width: 475px){
+            width: 270px;
+          }
           background-color: #F9B300;
           border-radius: 7px;
           margin-top: 25px;
@@ -151,7 +178,7 @@
           flex-wrap: wrap;
           margin-left: 66px;
           margin-top: 21px;
-          max-width: 712px;
+          max-width: 880px;
           justify-content: space-between;
       }
       &-column{
