--- a/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
@@ -9,6 +9,21 @@
             &-card{
                 width: 280px;
                 height: 461px;
+                .discount{
+                    display: flex;
+                    align-items: center;
+                    text-align: center; 
+                    width: 50px;
+                    justify-content: center;
+                    height: 50px;
+                    background: #F9B300;
+                    color: black;
+                    border-radius: 50%;
+                    font-weight: 700;
+                    font-size: 24.7978px;
+                    position: absolute;
+                    transform: translateY(-30px);
+                }
             }
         }
     }
