--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -303,10 +303,10 @@
     text-transform: uppercase;
     margin: 0px 10px;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 19px;
     line-height: 24px;
     color: #ffffff;
-    text-align: left;
+    padding-right: 30px;
 
 }
 
