--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,40 +1,35 @@
+
 .fresh-coffe{
-        height: 700px;
+        height: 600px;
         background-color: aqua;
-        padding-left: 30px;
+        padding: 70px 20px 0 70px;
     }
-    // -------------------------------------------------------------------- //
     .fresh-coffe-inner{
         display: flex;
-        max-width: 900px;
-        padding-top: 90px;
+        padding-top: 30px;
     }
     .fresh-coffe-container{
         margin-top: 40px;
     }
-    .fresh-coffe-left > .container > h1 {
+    .fresh-coffe-left > h1 {
         width: 960px;
         height: 100px;
         left: 60px;
         top: 156px;
+        
         font-size: 80px;
         line-height: 100px;
-        @media (max-width: 1070px){
-            font-size: 40px;
-            width: auto;
-        }
     }
-    .fresh-coffe-left > .container > p{
+    .fresh-coffe-left > p{
         width: 400px;
-        font-size: 18px;
         line-height: 24px;
         padding-top: 40px;
     }
-    .fresh-coffe-left > .container  > span > b{
+    .fresh-coffe-left > span > b{
         font-weight: 700;
         font-size: 18px;
     }
-    .fresh-coffe-left > .container > button{
+    .fresh-coffe-left > button{
         margin-top: 50px;
         width: 200px;
         height: 45px;
@@ -45,25 +40,24 @@
         border: none;
         cursor: pointer;
     }
+
+
+
 .catalog-products{
-    max-height: 2000px;
+    height: 700px;
     .catalog-inner{
         padding: 40px;
 
     }
     .catalog-inner > h2{
         font-size: 50px;
+        padding-left: 116px;
     }
     .catalog-items{
         display: flex;
         justify-content: center;
         padding-top: 80px;
         gap: 20px;
-    }
-    @media (max-width: 1500px){
-        .catalog-items{
-            flex-wrap: wrap;
-        }
     }
     .catalog-card{
         position: relative;
@@ -101,74 +95,37 @@
 }
 
 .sale-items{
-    height: 600px;
+    height: max-content;
     background-color: aquamarine;
     .sale-items-inner{
         padding-top: 40px;
-        margin-left: auto;
+        margin-left: 600px;    
     }
     .sale-items-inner > h1{
         text-align: right;
-        font-weight: 900;
-        font-size: 35px;
+        left: 1430px;
+
+        font-family: 'Gilroy';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 30px;
     }
     .sale-items-inner > p {
-        position: absolute;
-        left: 940px;
-        width: 764px;
+        height: 64px;
+        left: 604px;
+        top: 800px;
+        
+        font-weight: 500;
         font-size: 20px;
         line-height: 130%;
+        
         transform: translateY(80px);
         text-align: right;
         color: #000000;
     }
-  }
-  .catalog-card {
-    position: relative;
-    width: 335px;
-    height: 410px;
-    background: #ffffff;
-    box-shadow: 0px 0px 30px rgba(146, 146, 146, 0.2);
-    border-radius: 20px;
-  }
-  .catalog-card_img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .ct-tea-img {
-    max-width: 250px;
-    max-height: 250px;
-  }
-  .catalog-card_title {
-    text-align: center;
-    padding-top: 28px;
-  }
-  .catalog-card_button {
-    position: absolute;
-    left: 57px;
-    width: 230px;
-    height: 45px;
-    background-color: #f9b300;
-    color: #fff;
-    font-size: 15px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-  }
 }
 
 .advantages{
-    &-block{
-        transform: translateX(730px);
-        @media (max-width: 1173px){
-            transform: translateX(630px);
-        }
-        @media (max-width: 1060px){
-            transform: translateX(130px);
-            color: rgb(49, 49, 49);
-        }
-    }
     height: 900px;
     background-color: #FFF7E1;
     .advantages-inner{
@@ -179,36 +136,24 @@
         display: flex;
         position: relative;
     }
-    &-inner{
-        max-width: fit-content;
-    }
-    @media (max-width: 1880px){
-        .img1{
-            z-index: -2;
-        }
-    }
     .advantages-left > .img2{
         position: absolute;
-        @media (max-width: 960px){
-            display: none;
-        }
         left: 125px;
-        max-width: 700px;
-        max-height: 500px;
-    }
-    .advantages-left > .img1, .advantages-left > .img2{
-        @media (max-width: 1060px){
-            display: none;
-        }
-        position: absolute;
-        z-index: 100;
-        left: 172px;
-        top: 130px;
-        max-width: 500px;
+
+        max-width: 600px;
         max-height: 400px;
     }
+    .advantages-left > .img1{
+        position: absolute;
+        z-index: 100;
+        left: 188px;
+        top: 105px;
+
+        max-width: 400px;
+        max-height: 300px;
+    }
     .advantages-right{
-        margin-left: auto;
+        transform: translateX(1000px);
     }
     .advantages-right > h2{
         font-weight: bold;
@@ -233,73 +178,13 @@
 
 }
 
-.advantages {
-  height: 900px;
-  background-color: #fff7e1;
-  .advantages-inner {
-    padding-top: 200px;
-    display: flex;
-  }
-  .advantages-left {
-    display: flex;
-    position: relative;
-  }
-  @media (max-width: 1880px) {
-    .img1 {
-      z-index: -2;
-    }
-  }
-  .advantages-left > .img2 {
-    position: absolute;
-    @media (max-width: 960px) {
-      display: none;
-    }
-    left: 125px;
-    max-width: 600px;
-    max-height: 400px;
-  }
-  .advantages-left > .img1 {
-    @media (max-width: 960px) {
-      display: none;
-    }
-    position: absolute;
-    z-index: 100;
-    left: 188px;
-    top: 105px;
-    max-width: 400px;
-    max-height: 300px;
-  }
-  .advantages-right {
-    margin-left: auto;
-  }
-  .advantages-right > h2 {
-    font-weight: bold;
-    font-size: 35px;
-    width: 404px;
-    transform: translateY(-65px);
-  }
-  .advent-imgs {
-    transform: translateX(-110px);
-  }
-  .advantages-block > .ad-block-content {
-    transform: translateY(-90px);
-  }
-  .ad-block-content > h3 {
-    font-weight: bolder;
-    font-size: 21px;
-    line-height: 55px;
-  }
-  .ad-block-content > p {
-    width: 334px;
-  }
-}
 
 .roast-coffe{
     // width: 1903px;
     height: 700px;
     background: url('../../assets/Images/roastCoffe.png');
     .roast-coffe-inner{
-        padding-top: 70px;
+        padding: 70px;
         color: white;
     }
     .roast-coffe-inner > h2{
@@ -307,11 +192,11 @@
         font-style: normal;
         font-weight: 900;
         font-size: 35px;
-        padding-bottom: 70px;
+        line-height: 150px;
     }
     .roast-coffe-inner > p{
-        font-size: 18px;
-        max-width: 776px;
+        width: 776px;
+        line-height: 20px;
         padding-bottom: 20px;
     }
     .roast-coffe-inner > button{
