--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,17 +4,18 @@
 @import "../Layout/Footer/Footer.scss";
 @import "../pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss";
 @import "../pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss";
-*{
+@import "../pages/Blog/Blog.scss";
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 .container {
   max-width: 1210px;
-  @media (max-width: 578px){
+  @media (max-width: 578px) {
     padding: 0;
   }
-  padding: 0 15px; 
+  padding: 0 15px;
   margin: 0 auto;
 }
 a:active,
@@ -31,7 +32,7 @@ h2,
 h3,
 h4,
 h5,
-h6 { 
+h6 {
   letter-spacing: 0.5px;
 }
 ul,
