--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -77,8 +77,8 @@
   margin: 50px 286px 0px 0px;
 }
 .coffe_logo_blog {
-  margin: 50px 84px 0px 0px;
+  margin-top: 50px;
 }
 .coffe_logo_blog3 {
-  margin: 60px 84px 0px 0px;
+  margin-top: 60px;
 }
